# UPSem

./: CMakeLists.txt  UPSDoc.docx  main.cpp
Game/: Blackjack.cpp  Blackjack.h  Card.cpp  Card.h  Dealer.cpp  Dealer.h  Deck.cpp  Deck.h  Player.cpp  Player.h  PlayerInfo.cpp  PlayerInfo.h  Result.h  TurnResult.h
Game/test/: gamememtest.cpp
Server/: Client.cpp  Client.h  ClientThread.cpp  ClientThread.h  Lobby.cpp  Lobby.h  LobbyMessageHandler.cpp  LobbyMessageHandler.h  LobbyState.h  MessageHandler.cpp  MessageHandler.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  ThreadFunctions.cpp
Server/communication/: ClientData.cpp  ClientData.h  Constants.h  FieldConstants.h  Fields.h  MessageHandler.cpp  MessageHandler.h  MessageReceiver.cpp  MessageReceiver.h  MessageSender.cpp  MessageSender.h  MessageWriter.cpp  MessageWriter.h  RequestHandler.cpp  RequestHandler.h  ValueConstants.h  Values.h
Server/lobby/: GamePreparation.cpp  GamePreparation.h  Lobby.cpp  Lobby.h  LobbyMessageHandler.cpp  LobbyMessageHandler.h  LobbyState.h
Server/messenger/: Messenger.cpp  Messenger.h
Server/serialization/: DataType.h  Deserializer.cpp  Deserializer.h  Serializer.cpp  Serializer.h  TCPData.cpp  TCPData.h
Server/serialization/exceptions/: DeserializationException.cpp  DeserializationException.h
game/: Blackjack.cpp  Blackjack.h  Card.cpp  Card.h  Dealer.cpp  Dealer.h  Deck.cpp  Deck.h  Result.h  TurnResult.cpp  TurnResult.h
json-parsing/: JSONParser.cpp  JSONParser.h
libs/nlohmann/: json.hpp
server/: Server.cpp  Server.h
server/client/: Client.cpp  Client.h  ClientData.h
server/client/player/: PlayerInfo.cpp  PlayerInfo.h
server/communication/: Constants.h  Fields.h  Values.h
server/communication/handlers/: GameMessageHandler.cpp  GameMessageHandler.h  LobbyMessageHandler.cpp  LobbyMessageHandler.h  MessageHandler.cpp  MessageHandler.h
server/communication/serialization/: DataType.h  TCPData.cpp  TCPData.h
server/communication/serialization/exceptions/: SerializationException.cpp  SerializationException.h
server/lobby/: GamePreparation.cpp  GamePreparation.h  Lobby.cpp  Lobby.h  LobbyState.h
server/lobby/controller/: GameController.cpp  GameController.h
server/logger/: ServerLogger.cpp  ServerLogger.h
src/: InternetAddress.cpp  InternetAddress.h
src/Server/: AddressInfo.cpp  AddressInfo.h  Main.cpp  socketAddress.cpp  socketAddress.h
